scrollTriggers has issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 section {
   background: #222;
   color: #fff;
-  min-height: 200px;
+  min-height: 300px;
   padding: 50px 20px;
   display: flex;
   align-items: center;
